@@ -1,10 +1,10 @@
 package com.devonfw.tools.ide.process;
 
-import com.devonfw.tools.ide.log.IdeSubLogger;
-
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Objects;
+
+import com.devonfw.tools.ide.log.IdeSubLogger;
 
 /**
  * Wrapper for {@link ProcessBuilder} to simplify its usage and avoid common mistakes and pitfalls.
@@ -26,8 +26,9 @@ public interface ProcessContext extends EnvironmentContext {
   /**
    * Sets the executable command to be {@link #run()}.
    *
-   * @param executable the {@link Path} to the command to be executed by {@link #run()}. Depending on your operating system and the extension of the executable
-   * or OS specific conventions. So e.g. a *.cmd or *.bat file will be called via CMD shell on windows while a *.sh file will be called via Bash, etc.
+   * @param executable the {@link Path} to the command to be executed by {@link #run()}. Depending on your operating system and the extension of the
+   *     executable or OS specific conventions. So e.g. a *.cmd or *.bat file will be called via CMD shell on windows while a *.sh file will be called via Bash,
+   *     etc.
    * @return this {@link ProcessContext} for fluent API calls.
    */
   ProcessContext executable(Path executable);
@@ -165,41 +166,12 @@ public interface ProcessContext extends EnvironmentContext {
    */
   default String runAndGetSingleOutput(IdeSubLogger logger, String executable, String... arguments) {
 
-    String errorMessage;
     executable(executable).addArgs(arguments);
     if (logger == null) {
       errorHandling(ProcessErrorHandling.THROW_ERR);
     }
     ProcessResult result = run(ProcessMode.DEFAULT_CAPTURE);
-    if (result.isSuccessful()) {
-      List<String> out = result.getOut();
-      int size = out.size();
-      if (size == 1) {
-        return out.get(0);
-      } else if (size == 0) {
-        errorMessage = "No output received from " + result.getCommand();
-      } else {
-        StringBuilder sb = new StringBuilder();
-        sb.append("Expected single line of output but received ");
-        sb.append(size);
-        sb.append(" lines from ");
-        sb.append(result.getCommand());
-        sb.append(":");
-        for (String line : out) {
-          sb.append("\n");
-          sb.append(line);
-        }
-        errorMessage = sb.toString();
-      }
-    } else {
-      errorMessage = "Command " + result.getCommand() + " failed with exit code " + result.getExitCode();
-    }
-    if (logger == null) {
-      throw new IllegalStateException(errorMessage);
-    } else {
-      logger.log(errorMessage);
-      return null;
-    }
+    return result.getSingleOutput(logger);
   }
 
   /**
